--- a/rotor.css
+++ b/rotor.css
@@ -12,6 +12,22 @@ canvas {
     display: block;
 }
 
+button {
+  background-color: #ebebeb;
+  border-radius: 6px;
+  border-width: 0;
+  color: #000000;
+  cursor: pointer;
+  font-family: "Lucida Console", Monaco, monospace;
+  margin: 0;
+  margin-block-start: 0.5em;
+  margin-block-end: 0;
+  margin-inline-start: 0.5em;
+  margin-inline-end: 0.5em;
+  padding: 4px 6px;
+  text-align: center;
+}
+
 input:invalid + span::after {
     content: "✖";
     padding-left: 5px;
